<resources>
    <string name="app_name">Clonestagram</string>
    <string name="facebook_app_id">1700716980068899</string>
    <string name="fb_login_protocol_scheme">fb1700716980068899</string>

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="username">Username</string>
    <string name="signup">Sign up</string>
    <string name="signin_email">Log In</string>
    <string name="signin_facebook">Login with Facebook</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>

    <!-- Bottom Navigation View -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add_photo">Add photo</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->
    <string name="back">Back</string>
    <string name="login_string">Phone number, email or username</string>
    <string name="logo">Instagram logo</string>
    <string name="camera">Add photo icon</string>
    <string name="dm">Direct message icon</string>
    <string name="cancel">Cancel</string>
    <string name="gallery">Gallery</string>
    <string name="pictures">Pictures</string>
    <string name="video">Video</string>
    <string name="others">Others...</string>
    <string name="next">Next</string>
    <string name="selected_image">Selected Image</string>
    <string name="search">Search</string>
    <string name="messages">Messages</string>
    <string name="suggestions">Suggestions</string>
    <string name="direct">Direct</string>
    <string name="new_message">New Message</string>
    <string name="video_chat">Video Chat</string>
    <string name="dm_camera">Camera</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>