<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/item_home"
        android:title="@string/home" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/item_search"
        android:title="@string/search" />
    <item
        android:id="@+id/action_add_photo"
        android:icon="@drawable/item_add_photo"
        android:title="@string/add_photo" />
    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/item_notification"
        android:title="@string/notification" />
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/item_account"
        android:title="@string/account" />
</menu>