<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.directMessage.DirectMessageActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorWhite"
        android:elevation="2dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/ic_cancel"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/direct"
            android:layout_marginHorizontal="40dp"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ic_video_chat"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/new_message"
            android:src="@drawable/ic_direct_message"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            />

        <ImageView
            android:id="@+id/ic_new_message"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/video_chat"
            android:src="@drawable/ic_direct_message"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            />

    </Toolbar>

    <EditText
        android:layout_height="50dp"
        android:id="@+id/search_box"
        android:text="@string/search"
        android:autofillHints="@string/search"
        android:hint="@string/search"
        android:inputType="text"
        android:layout_below="@id/toolbar"
        style="@style/TextBoxStyle"
        android:padding="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:drawableStart="@drawable/ic_search"
        />

    <LinearLayout
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/search_box"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messages"
            android:layout_marginVertical="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/message"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestions"
            android:layout_marginVertical="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:text="@string/dm_camera"
        android:textAllCaps="false"
        android:drawableStart="@drawable/ic_camera"
        />

</RelativeLayout>