<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:srcCompat="@drawable/ic_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login_facebook"
            style="@style/ButtonStyle"
            android:drawableStart="@drawable/ic_facebook_logo"
            android:drawablePadding="-80dp"
            android:paddingStart="100dp"
            android:text="@string/signin_facebook"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="OR"
                android:textColor="@color/dark_gray"
                tools:ignore="HardcodedText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toStartOf="@id/tvText"
                android:background="@color/gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@id/tvText"
                android:background="@color/gray" />

        </RelativeLayout>

        <EditText
            android:id="@+id/txt_email"
            style="@style/TextBoxStyle"
            android:layout_marginVertical="5dp"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txt_name"
            style="@style/TextBoxStyle"
            android:layout_marginVertical="5dp"
            android:autofillHints="@string/name"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/txt_username"
            style="@style/TextBoxStyle"
            android:layout_marginVertical="5dp"
            android:autofillHints="@string/username"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/txt_password"
            style="@style/TextBoxStyle"
            android:layout_marginVertical="5dp"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textVisiblePassword" />

        <Button
            android:id="@+id/btn_signup"
            style="@style/ButtonStyle"
            android:text="@string/signup"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>