<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:clipToPadding="false"
    >

        <Toolbar
            android:id="@+id/nav_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:elevation="2dp"
            >

                <ImageView
                    android:id="@+id/ic_camera"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/camera"
                    android:src="@drawable/ic_camera"
                    />

                <ImageView
                    android:id="@+id/ic_logo"
                    android:layout_width="112dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@drawable/ic_logo"
                    android:layout_marginStart="25dp"
                    />

                <ImageView
                    android:id="@+id/ic_dm"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/dm"
                    android:src="@drawable/ic_direct_message"
                    android:layout_gravity="end"
                    android:layout_marginEnd="15dp"
                    />

        </Toolbar>

        <FrameLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/nav_toolbar"
            android:layout_above="@+id/nav_bottom"
            >

        </FrameLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_bottom"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            app:labelVisibilityMode="unlabeled"
            android:elevation="4dp"
            app:menu="@menu/nav_bottom" />

</RelativeLayout>
